# cargo-wiiu

./: .gitignore  Cargo.toml  README.md  elf2rpl.rpx  input.rpx
.github/: dependabot.yml  publish.yml  test.yml
.github/workflows/: publish.yml  test.yml
src/: elf.rs  elf2rpl.rs  main.rs  rpl.rs  upload.rs  wuhb.rs
tests/dkp/: Note.txt
tests/dkp/elf/: custom_default_heap.elf  erreula.elf  gx2_triangle.elf  helloworld.elf  helloworld_cpp.elf  my_first_rpl.elf  my_first_rpx.elf  swkbd.elf
tests/dkp/rpl/: my_first_rpl.rpl
tests/dkp/rpx/: custom_default_heap.rpx  erreula.rpx  gx2_triangle.rpx  helloworld.rpx  helloworld_cpp.rpx  my_first_rpx.rpx  swkbd.rpx
tests/dkp/wuhb/: custom_default_heap.wuhb  erreula.wuhb  gx2_triangle.wuhb  helloworld.wuhb  helloworld_cpp.wuhb  my_first_rpx.wuhb  swkbd.wuhb
