[package]
name = "cargo-wiiu"
version = "0.1.0"
edition = "2024"
authors = ["29th-Day"]
description = "Cargo extension to easily work with Nintendo Wii U binaries."
readme = "README.md"
repository = "https://github.com/rust-wiiu/cargo-wiiu"
license-file = "LICENSE"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["nintendo", "homebrew", "wiiu"]

[dependencies]
binrw = "0.15.1"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = { version = "1.1.9", features = ["zlib-rs"] }
indextree = "4.8.1"

[dev-dependencies]
rstest = "0.26.1"
